fix(client:bulma): padding for multi columns on mobile
Former-commit-id: 510fddf02c56f431bab477a7f18d9cbdb8a35f79

--- a/client/app/global-scss/_bulma-additions.scss
+++ b/client/app/global-scss/_bulma-additions.scss
@@ -28,3 +28,11 @@
     }
   }
 }
+
+@include mobile {
+  .columns {
+    .column + .column {
+      padding-top: 0;
+    }
+  }
+}
